<resources>
    <string name="app_name" translatable="false">Metal Detector + Gold Finder</string>
    <string name="metal_detector_2" translatable="false">Metal Detector + Gold Finder</string>
    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="detect_all_metals_gold_silver">Accurate metal identification</string>
    <string name="alert_when_metal_is_detected">Confirm the gold is correct</string>
    <string name="sound_sensor">Scan coin information</string>
    <string name="permission">Permission</string>
    <string name="notification">Notification</string>
    <string name="continue_1">Continue</string>
    <string name="camera">Camera</string>
    <string name="set_permissions_in_settings">Set Permissions In Settings</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Settings</string>
    <string name="allow">Allow</string>
    <string name="to_access_photos_media_and_files_on_your_device">to access record Camera</string>
    <string name="to_access_notification">to access notification and record audio</string>
    <string name="you_must_grant_permission">You must grant Permission</string>
    <string name="themes">Themes</string>
    <string name="please_choose_a_theme">Please choose a theme</string>
    <string name="metal_detector">Metal Detector</string>
    <string name="gold_detector">Gold Detector</string>
    <string name="more">More</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="policy">Privacy &amp; Policy</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="about">About us</string>
    <string name="zero_start_title">Do you like the app?</string>
    <string name="one_start_title">Oh, no!</string>
    <string name="four_start_title">We love you too!</string>
    <string name="zero_start">Let us know your experience</string>
    <string name="one_start">Please give us some feedback</string>
    <string name="four_start">Thanks for your feedback</string>
    <string name="please_give_a_review">Please give a review</string>
    <string name="successful"> Rate Successful</string>
    <string name="y_axis">Y-axis</string>
    <string name="_83_2">83.2</string>
    <string name="x_axis">X-axis</string>
    <string name="_54_1">54.1</string>
    <string name="t" translatable="false">μT</string>
    <string name="minium">Minium</string>
    <string name="average">Average</string>
    <string name="maxium">Maxium</string>
    <string name="choose_alarm_sound">Choose alarm sound</string>
    <string name="set_alarm_trigger_value">Set Alarm Trigger Value</string>
    <string name="sound12345">Sound12345</string>
    <string name="_70_t">70</string>
    <string name="save">Save</string>
    <string name="please_enter_the_value">Please enter the value</string>
    <string name="storage">Storage</string>
    <string name="db" translatable="false">dB</string>
    <string name="sensor_calibration">Sensor calibration</string>
    <string name="to_initialize_the_sensor_point_your_device_up_towards_the_sky_and_move_it_in_a_figure_8_motion">To initialize the sensor, point your device up at the sky and move the shot in a figure 8 motion</string>
    <string name="the_device_does_not_support_magnetic_sensors">The device does not support magnetic sensors</string>
    <string name="z_axis">Z-axis</string>
    <string name="_0_00">0,00</string>
    <string name="warning">Warning</string>
    <string name="unfortunately_your_device">Device does not support search</string>
    <string name="ok">OK</string>
    <string name="coin_recognition">Coin Recognition</string>
    <string name="select_theme">Select theme</string>
    <string name="metal_cannot_detected">Metal cannot detected</string>
    <string name="magnetic_field_diagram">Magnetic field diagram</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="coin_library">Coin library</string>
    <string name="scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_coin">Search coin</string>
    <string name="ringtone_alarm">Ringtone alarm</string>
    <string name="mute">Mute</string>
    <string name="flass">Flass</string>
    <string name="about_us">About us</string>
    <string name="Version">Version</string>
    <string name="choose_the_theme_do_you_want">Choose the theme do you want</string>
    <string name="get_started">Get started</string>
    <string name="coin_detail">Coin Detail</string>
    <string name="name">Name</string>
    <string name="information">Information</string>
    <string name="year">Year</string>
    <string name="weight">Weight</string>
    <string name="diameter">Price</string>
    <string name="gold_detected">Gold detected</string>
    <string name="gold_cannot_detected">Gold cannot detected</string>
    <string name="no_internet">No internet</string>
    <string name="coin_not_found">Coin not found</string>
    <string name="no_information_found_for_this_coin">No information found for this coin</string>
    <string name="vibration">Vibration</string>
    <string name="how_to_initialize_the_sensors">How to initialize the sensors</string>
    <string name="if_you_cannot_solve_it_in_this_way_rotate_your_device_along_3_axis">if you cannot solve it in this way, rotate your device along 3 - axis</string>
    <string name="value">Value:</string>
    <string name="sound_on">Sound on</string>
    <string name="we_can_t_not_find_any_coin_you_matching_your_search">We can’t not find any coin you matching your search</string>
    <string name="result">Result</string>
</resources>